tests/m3/hopix/typechecker/bad/bool.hopix
val t : bool = true
val f : bool = 0